[B]3.6.1[/B]
- updated: Scraper name

[B]3.6.0[/B]
- updated: out factored tagline scraping to common library

[B]3.5.0[/B]
- added: aspect tag and reorder languages according to the alphabet

[B]3.4.1[/B]
- updated chinese translation

[B]3.4.0[/B]
- added: prefer trailer language according to the selected language

[B]3.3.0[/B]
- updated: improve CreateSearchUrl according to TMDb API changes

[B]3.2.0[/B]
- fixed: keep Originaltitle
- fixed: &'s needs double escaping
- added: option to scrape certification from selected country

[B]3.1.0[/B]
- updated: factored out title scraping to common library

[B]3.0.9[/B]
- fixed: missing language parameter name in NfoUrl

[B]3.0.8[/B]
- fixed: movies without release date won't find

[B]3.0.7[/B]
- fixed: keep originaltitle; IMDb ID; remove TMDb title fallback, because it became obsolate

[B]3.0.6[/B]
- updated chinese translation

[B]3.0.5[/B]
- reverted latest change

[B]3.0.4[/B]
- added: option to not scrape sets

[B]3.0.3[/B]
- fixed: plot outline includes trash on some movies

[B]3.0.2[/B]
- fixed: imdb IDs not properly handled

[B]3.0.1[/B]
- changed: also fallback to original_title to make sure a valid title gets scraped

[B]3.0.0[/B]
- major rewrite: utilize TMDb API v3, scraping set information, prioritize posters on the selected language

[B]2.0.1[/B]
- fixed: imdb url nfo not resolving tmdb id

[B]2.0.0[/B]
- complete rewrite to use the json api

[B]1.4.5[/B]
- added: support for IMDb.xx support for NFO scraping

[B]1.4.4[/B]
- fixed: actor thumb scraping was broken due to API changes

[B]1.4.3[/B]
- fixed: use imdb ID from nfo
- changed: scrape only one studio

[B]1.4.2[/B]
- fixed: url/mixed nfo scraping

[B]1.4.1[/B]
- fixed: IMDb rating after site change 

[B]1.4.0[/B]
- added: trailer scraping from TMDB via youtube plugin

[B]1.3.1[/B]
- fixed: added year to search string properly

[B]1.3.0[/B]
- added: year to search string

[B]1.2.5[/B]