@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.themoviedb.org"
        name="The Movie Database"
-       version="3.6.1"
+       version="3.7.0"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="2.7.0"/>
+    <import addon="metadata.common.themoviedb.org" version="2.8.0"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.7"/>
-    <import addon="metadata.common.imdb.com" version="2.1.9"/>
+    <import addon="metadata.common.imdb.com" version="2.6.0"/>
     <import addon="plugin.video.youtube" version="2.9.1" optional="true"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
