@@ -65,18 +65,6 @@
 			<RegExp input="$$10" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="5+">
 				<expression>(.+)</expression>
 			</RegExp>
-			<RegExp input="$$1" output="\1" dest="7">
-				<expression clear="yes" noclean="1">&quot;production_companies&quot;:\[([^\]]*)</expression>
-			</RegExp>
-			<RegExp input="$$7" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="5+">
-				<expression trim="1" fixchars="1">&quot;name&quot;:&quot;([^&quot;]*)</expression>
-			</RegExp>
-			<RegExp input="$$1" output="\1" dest="7">
-				<expression clear="yes" noclean="1">&quot;production_countries&quot;:\[([^\]]*)</expression>
-			</RegExp>
-			<RegExp input="$$7" output="&lt;country&gt;\1&lt;/country&gt;" dest="5+">
-				<expression trim="1" fixchars="1">&quot;name&quot;:&quot;([^&quot;]*)</expression>
-			</RegExp>
 			<RegExp input="$INFO[RatingS]" output="&lt;chain function=&quot;GetIMDBRatingById&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="6">
 					<expression noclean="1">&quot;id&quot;:[0-9]*,&quot;imdb_id&quot;:&quot;([^&quot;]*)</expression>
@@ -85,6 +73,12 @@
 			</RegExp>
 			<RegExp input="$INFO[RatingS]" output="&lt;chain function=&quot;GetTMDBRatingByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression>TMDb</expression>
+			</RegExp>
+			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBStudioByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
+				<expression />
+			</RegExp>
+			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBCountryByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
+				<expression />
 			</RegExp>
 			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBDirectorsByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression />
