@@ -1,3 +1,6 @@
+[B]3.7.0[/B]
+- updated: out factored studio and country scraping to common library
+
 [B]3.6.1[/B]
 - updated: Scraper name
 
